--- a/JSCeramics/css/app.css
+++ b/JSCeramics/css/app.css
@@ -34,7 +34,56 @@ h1 {
   border-bottom: 1px solid black;
 }
 
-img {
-  width: 40%;
+.card {
+  width: 49.75%;
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 16px;
+}
+
+.card img {
   height: 500px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.card img:hover {
+  opacity: 0.9;
+}
+
+.card h2 {
+  display: inline-block;
+  margin: 8px 0 16px 0;
+  font-weight: 300;
+}
+
+.cards-container {
+  padding: 16px;
+}
+
+.about h3 {
+  font-size: 40px;
+  font-weight: 300;
+}
+
+.about {
+  width: 40%;
+  min-width: 600px;
+  margin: 100px 0 100px 200px;
+}
+
+.contact {
+  margin-top: 100px;
+}
+
+.contact p {
+  margin: 0;
+  font-size: 20px;
+}
+
+.about h3:nth-child(even) {
+  border-bottom: 2px solid black;
+  display: inline-block;
+  padding-bottom: 2px;
+  margin-top: 0;
 }
