--- a/BlogPostProject/css/app.css
+++ b/BlogPostProject/css/app.css
@@ -13,6 +13,13 @@ h4,
 h5,
 h6 {
   font-family: "Bitter", serif;
+  font-weight: 500;
+}
+
+h1 {
+  font-size: 80px;
+  letter-spacing: -1.5px;
+  font-weight: 400;
 }
 
 h2 {
@@ -21,10 +28,39 @@ h2 {
   letter-spacing: -0.5px;
 }
 
+h3 {
+  font-size: 38px;
+  letter-spacing: 0px;
+}
+
+h4 {
+  font-size: 30px;
+  letter-spacing: 0.25px;
+}
+
+h5 {
+  font-size: 24px;
+  letter-spacing: 0.25px;
+}
+
+h6 {
+  font-size: 20px;
+  letter-spacing: 0.25px;
+}
+
+code {
+  color: #e95400;
+  font-weight: bold;
+}
+
 .main-content {
   max-width: 900px;
   margin: 0 auto;
   padding: 32px;
+}
+
+.main-content h3 {
+  text-transform: capitalize;
 }
 
 .main-content p:first-of-type {
@@ -44,6 +80,7 @@ h2 {
   font-weight: 500;
   letter-spacing: 0px;
   margin: 40px 0;
+  font-size: 18px;
 }
 
 .quote {
@@ -58,4 +95,32 @@ cite {
   font-weight: bold;
   display: block;
   margin-left: 20px;
+}
+
+footer {
+  background-color: #863ae8;
+}
+
+footer ul {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 900px;
+  text-align: center;
+  padding: 28px 0;
+}
+
+footer ul li {
+  display: inline;
+  margin-right: 16px;
+  margin-left: 16px;
+  list-style: none;
+}
+
+footer li a:link {
+  color: white;
+  text-decoration: none;
+}
+
+footer li a:hover {
+  text-decoration: underline;
 }
